webapp/src/components/DashboardPage/DashboardPage.css
.DashboardPage .empty {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  color: var(--gray);
  font-size: 16px;
}

.DashboardPage .stats-grid, .DashboardPage .latest-transactions-grid {
  margin-bottom: 64px;
}

.DashboardPage h3 {
  font-weight: 600;
  margin-bottom: 5px;
}

.DashboardPage h3,
.DashboardPage .ui.card .content .description,
.DashboardPage .ui.card .content .meta {
  color: var(--text);
}

.DashboardPage .DashboardStats .ui.card .content .meta {
  margin-bottom: 3px;
}

.DashboardPage .DashboardStats .ui.card .content .description {
  font-size: 19px;
  font-weight: bold;
  margin-top: 10px;
}

.DashboardPage .DashboardPublications .ParcelCanvas {
  width: 48px;
  height: 48px;
  margin-right: 20px;
  float: left;
}

.DashboardPage .DashboardPublications .ui.card .content .description {
  top: 2px;
  position: relative;
  display: inline;
}

.DashboardPage .DashboardPublications .price {
  color: var(--light-blue);
}

.DashboardPage .DashboardPublications .date {
  color: var(--gray);
}

